--- a/supolio/src/index.css
+++ b/supolio/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Freesentation - SemiBold */
+@font-face {
+  font-family: "FreesentationSemiBold";
+  src: url("./fonts/Freesentation-6SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Paperlogy - Bold */
+@font-face {
+  font-family: "PaperlogyBold";
+  src: url("./fonts/Paperlogy-7Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* RIDIBatang */
+@font-face {
+  font-family: "RIDIBatang";
+  src: url("./fonts/RIDIBatang.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Global font 설정 */
+body {
+  font-family: "RIDIBatang", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
 }
