scroll 확장 프로그램 설치 후 사용 설정

--- a/supolio/src/index.css
+++ b/supolio/src/index.css
@@ -25,7 +25,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.scrollbar-hidden {
+  @apply scrollbar-hide; /* Tailwind CSS에서 스크롤바 숨기기 */
+}
 /* Global font 설정 */
 body {
   font-family: "RIDIBatang", -apple-system, BlinkMacSystemFont, "Segoe UI",
